[gd_scene load_steps=2 format=3 uid="uid://c3oq13hnoqwc5"]

[ext_resource type="Script" path="res://Scripts/Menus.gd" id="1_30ljg"]

[node name="Menus" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_30ljg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -157.5
offset_top = -123.0
offset_right = 157.5
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16

[node name="Play" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(64, 48)
layout_mode = 2
focus_mode = 0
text = "Play
"

[node name="Controls" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(64, 48)
layout_mode = 2
focus_mode = 0
text = "Controls"

[node name="Credits" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(64, 48)
layout_mode = 2
focus_mode = 0
text = "Credits
"

[node name="Quit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(64, 48)
layout_mode = 2
focus_mode = 0
text = "Quit
"

[node name="CreditsPanel" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CreditsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.5
offset_top = -156.0
offset_right = 78.5
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Hell's Rising

Made in Fall 2023 for Ludum Dare 54 by

Nick Vatanshenas (0megq) - Programmer and Artist

Charles Tian - Design and Moral Support

Juliet Kozlov - Design, Moral Support, and Sound

Anirudh Sunkad - Idea and Level Designs"
horizontal_alignment = 1

[node name="CloseCredits" type="Button" parent="CreditsPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 58.0
offset_bottom = 39.0
text = "Close"

[node name="ControlsPanel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CloseControls" type="Button" parent="ControlsPanel"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 66.0
offset_bottom = 47.0
text = "Close"

[node name="Label" type="Label" parent="ControlsPanel"]
layout_mode = 1
offset_left = 120.0
offset_top = 154.0
offset_right = 344.0
offset_bottom = 284.0
text = "WASD or arrow keys to move

Press Escape to pause

Get to the top to win!"

[node name="CheckButton" type="CheckButton" parent="ControlsPanel"]
layout_mode = 0
offset_left = 115.0
offset_top = 93.0
offset_right = 253.0
offset_bottom = 124.0
focus_mode = 0
text = "Mute Audio"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="CreditsPanel/CloseCredits" to="." method="_on_close_credits_pressed"]
[connection signal="pressed" from="ControlsPanel/CloseControls" to="." method="_on_close_controls_pressed"]
[connection signal="toggled" from="ControlsPanel/CheckButton" to="." method="_on_check_button_toggled"]
